fix(version_processor): 调整代码逻辑